<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_title">εxodus</string>
    <string name="app_name">Exodus</string>
    <string name="app_logo">Application Logo</string>
    <string name="trackers_pct">Trackers:</string>
    <string name="permissions_pct">Permissions:</string>
    <string name="trackers">Trackers</string>
    <string name="permissions">Permissions</string>
    <string name="network_error">Network Unavailable</string>
    <string name="not_connected">No Internet Connection</string>
    <string name="json_error">JSON Error</string>
    <string name="installed">Installed Version: </string>
    <string name="report_version">Tested Version: </string>
    <string name="no_trackers">The application could contain tracker(s) we do not know yet.</string>
    <string name="no_permissions">This application doesn\'t require any permissions.</string>
    <string name="tested">There\'s no report for the installed version (%1$s), the information displayed is based on another (%2$s) version</string>
    <string name="analysed">This app hasn\'t been analysed by Exodus Privacy yet.</string>
    <string name="no_package_manager">It appears that your system doesn\'t allow access to the list of installed apps.</string>
    <string name="no_app_found">It appears that you don\'t have any apps installed from the source we test (Google Play store or F-Droid).</string>
    <string name="get_reports_connection">Getting applications: Waiting for server connection</string>
    <string name="get_reports">Getting applications</string>
    <string name="parse_application">Processing Applications:</string>
    <string name="parse_trackers">Processing Trackers:</string>
    <string name="get_trackers_connection">Getting trackers: Waiting for server connection</string>
    <string name="get_trackers">Getting trackers</string>
    <string name="no_settings">This app doesn\'t have settings</string>
    <string name="logo">%1 Application Logo</string>
    <string name="created_by">Created By</string>
    <string name="created_date">Report created on</string>
    <string name="and_updated">and updated on</string>
    <string name="view_on_exodus">See on εxodus ➤</string>
    <string name="view_on_google_play">See on Google Play ➤</string>
    <string name="view_on_fdroid">See on F-Droid ➤</string>
    <string name="downloads">downloads</string>
    <string name="code_signature_found">We have found code signature of the following trackers in the application:</string>
    <string name="code_signature_not_found">We have not found code signature of any tracker we know in the application.</string>
    <string name="code_permission_found">We have found the following permissions in the application:</string>
    <string name="code_permission_not_found">This application doesn\'t require any permissions.</string>
    <string name="tracker_infos">A tracker is a piece of software meant to collect data about you or your usages. <a href="https://reports.exodus-privacy.eu.org/en/info/trackers/">Learn more…</a></string>
    <string name="permission_infos">Permissions are actions the application can do on your phone. <a href="https://reports.exodus-privacy.eu.org/en/info/permissions/">Learn more…</a></string>
    <string name="permission_infos_dangerous">The icon <font color="red"><b>!</b></font> indicates a \'Dangerous\' or \'Special\' level according to <a href="https://developer.android.com/guide/topics/permissions/overview">Google\'s protection levels.</a></string>
    <string name="tracker_web_page">Tracker web page ➤</string>
    <string name="detection_rules">Detection Rules</string>
    <string name="code_signature">Code detection rule:</string>
    <string name="network_signature">Network detection rule:</string>
    <string name="tracker_presence">Present in %d of your applications</string>
    <string name="tracker_presence_in">Present in:</string>
    <string name="no_app_found_tracker">This tracker seems not be present in your applications</string>
    <string name="source">Source: %s</string>
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="refresh_needed">Refresh needed</string>
    <string name="refresh_needed_message">Data have not been update since %1$s.\n\nWould you like to refresh them?</string>
    <!-- Menu -->
    <string name="menu_action_search">Search</string>
    <string name="menu_action_filter">Filter</string>
    <string name="menu_action_settings">Application Settings</string>

    <!-- Filters -->
    <string name="filter_by_name">Filter by name</string>
    <string name="having_most_trackers">Having most trackers</string>
    <string name="having_less_trackers">Having less trackers</string>
    <string name="having_most_permissions">Having most permissions</string>
    <string name="having_less_permissions">Having less permissions</string>
    <string name="submit">Submit</string>
    <string name="app_not_analyzed">Would you like to analyze the app?\n\nThe app id will be automatically pasted to the website form. You will only need to submit the form.</string>
    <string name="app_not_analyzed_title">This app has not been analyzed!</string>
    <string name="title_apps">Apps</string>
    <string name="title_trackers">Trackers</string>
    <string name="title_about">About</string>
    <string name="list_of_apps">See the list of apps</string>
    <string name="apps">%1$s apps</string>
    <string name="nothing_here">Nothing to display currently. You can pull to refresh!</string>

    <!-- Apps Fragment -->
    <string name="app_version"><xliff:g id="rating">%1$s</xliff:g></string>
    <string name="app_trackers"><xliff:g id="rating">%1$d</xliff:g></string>
    <string name="app_perms"><xliff:g id="rating">%1$d</xliff:g></string>
    <string name="not_available">N/A</string>
    <string name="fetching_trackers">Updating Trackers Database!</string>
    <string name="fetching_apps">Updating Apps Database!</string>

    <!-- About Fragment -->
    <string name="version_info"><xliff:g id="type">%1$s</xliff:g> <xliff:g id="name">%2$s</xliff:g>-<xliff:g id="code">%3$d</xliff:g></string>
    <string name="website">Visit our website</string>
    <string name="website_desc">Find more information on the Exodus Privacy project</string>
    <string name="srcCode">Check source code</string>
    <string name="srcCode_desc">Report issues, star, contribute PRs or just check the code</string>
    <string name="privPolicy">Privacy policy</string>
    <string name="privPolicy_desc">Learn how we handle your data</string>
    <string name="email">Contact Exodus Privacy</string>
    <string name="email_desc">Reach out to us via email</string>
    <string name="twitter">Follow us on Twitter</string>
    <string name="twitter_desc">Stay updated with latest developments on Exodus Privacy project</string>

    <!-- AppDetail Fragment -->
    <string name="open_exodus_page">Open Exodus page</string>
    <string name="submit_app">Submit app</string>
    <string name="open_store">Open store</string>
    <string name="open_app_info">Open app info</string>
    <string name="version">Version <xliff:g id="version">%1$s</xliff:g></string>
    <string name="report_date">Report created on <xliff:g id="date">%1$s</xliff:g></string>
    <string name="installed_version">Installed <xliff:g id="version">%1$s</xliff:g></string>
    <string name="analyzed_version">Analyzed <xliff:g id="version">%1$s</xliff:g></string>

    <!-- Dialog Fragment -->
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="warning_title">Allow Exodus to transmit required data?</string>
    <string name="warning_desc">In order to run, this Application MUST collect and send data to Exodus Privacy servers which includes the list of applications installed on this device for tracker analysis. It doesn\'t contains any personal information.</string>

</resources>
