<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="androidx.core.content.ContextCompat" />

        <import type="android.view.View" />

        <variable
            name="reportInfo"
            type="org.eu.exodus_privacy.exodusprivacy.ReportViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@{reportInfo.name}"
                android:textAlignment="center"
                android:textColor="@color/colorPurple"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/dummy"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/trackers_nb"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="@{ContextCompat.getDrawable(context,reportInfo.trackerColor)}"
                android:text="@{reportInfo.trackerNumberStr}"
                android:textAlignment="center"
                android:textColor="@color/textColorWhite"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="@{reportInfo.trackerVisibility ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dummy" />

            <TextView
                android:id="@+id/trackers_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/trackers"
                android:textColor="@color/textColorDark"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="@{reportInfo.trackerVisibility ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/trackers_nb"
                app:layout_constraintTop_toTopOf="@id/trackers_nb" />



            <TextView
                android:id="@+id/installed_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/report_version"
                android:textColor="@color/textColorDark"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trackers_title" />

            <TextView
                android:id="@+id/installed_version_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@{reportInfo.installedVersion}"
                android:textColor="@color/textColorDark"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/installed_version"
                app:layout_constraintTop_toTopOf="@+id/installed_version" />



            <TextView
                android:id="@+id/report_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/textColorDarkLight"
                android:textSize="16sp"
                android:visibility="@{reportInfo.reportVisibility ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/installed_version_value" />

            <TextView
                android:id="@+id/report_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:autoLink="web"
                android:text="@string/view_on_exodus"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPurple"
                android:textSize="16sp"
                android:visibility="@{reportInfo.reportVisibility ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/report_date" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/report_url">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trackers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/analysed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/analysed"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:visibility="@{reportInfo.trackerVisibility ? View.GONE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/report_url" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>